--- a/css/styles.css
+++ b/css/styles.css
@@ -1,27 +1,6 @@
-
-
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    
-}
-
-.clearfix::after {
-    content: "";
-    display: table;
-    clear: both;
-}
-
-body {
-    background: #C9FFBF;  /* fallback for old browsers */
-	background: -webkit-linear-gradient(to right, #FFAFBD, #C9FFBF);  /* Chrome 10-25, Safari 5.1-6 */
-	background: linear-gradient(to right, #FFAFBD, #C9FFBF); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    font-family: Lato;
-    font-weight: 300;
-    position: relative;
-    height: 100vh;
-    color: #555;
-}
-
-
+.player-console {
+    display: none;
+  }
+  body{
+      background-color:rgb(223, 211, 201);
+  }
